--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(./common.css);
 @import url(../blocks/header.css);
+@import url(../blocks/main.css);
+@import url(../blocks/form-01.css);
 @import url(../blocks/footer.css);
 
 
@@ -8,7 +10,7 @@
 }
 
 .body {
-  background-color: rgb(30, 30, 30);
+  background-color: rgb(45, 45, 45);
 }
 
 .body_lock {
@@ -20,9 +22,6 @@
   max-width: 1100px;
   box-sizing: border-box;
   margin: auto;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
 
   /* background-color: rgb(35, 35, 35); */
   color: rgb(255, 255, 255);
