feat: finish form-03. Custom checkbox. Flexbox structure

--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url(../blocks/main.css);
 @import url(../blocks/form-01.css);
 @import url(../blocks/form-02.css);
+@import url(../blocks/form-03.css);
 @import url(../blocks/footer.css);
 
 
