--- a/blocks/form-02.css
+++ b/blocks/form-02.css
@@ -18,14 +18,15 @@
 .form-02__title {
   text-align: left;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .form-02__fieldset {
   border: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
+  position: relative;
 }
 
 .form-02__fieldset:last-child {
@@ -38,20 +39,20 @@
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgb(165, 165, 165);
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 15px;
+  margin-bottom: 30px;
   width: 100%;
+  font-size: initial;
 }
 
 .form-02__input:focus {
-  border: none;
+  /* border: none; */
   outline: none;
   box-sizing: border-box;
-  border-bottom: 1px solid black;
-  background-color: rgba(150, 150, 150, 0.1);
+  /* border-bottom: 1px solid var(--blue-acent-color); */
 }
 
-.form-02__input[type="checkbox"] {
+.form-02__input_type_checkbox {
   width: initial;
   margin-bottom: 0;
   min-width: 20px;
@@ -59,7 +60,7 @@
   vertical-align: middle;
 }
 
-.form-02__input[type="checkbox"]:focus {
+.form-02__input_type_checkbox:focus {
   outline: var(--blue-acent-color) solid 1px;
 }
 
@@ -80,7 +81,8 @@
   font-size: 14px;
   margin-top: 20px;
   margin-bottom: 8px;
-  padding-left: 7px;
+  padding-left: 0px;
+  position: relative;
 }
 
 /* ============= button =============== */
@@ -104,4 +106,26 @@
 .form-02__button_type_nofill {
   background-color: transparent;
   color: var(--blue-acent-color);
+}
+
+/* =========== validation =============== */
+
+.form-02__input_type_error {
+  border-bottom-color: red;
+}
+
+.form-02__input-error {
+  position: absolute;
+  top: 40px;
+  left: 25px;
+  font-size: 14px;
+  font-weight: 600;
+  color: red;
+  visibility: hidden;
+  width: auto;
+  z-index: 1;
+}
+
+.form-02__input-error_active {
+  visibility: visible;
 }
