--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,7 @@
 @import url(../blocks/form-01.css);
 @import url(../blocks/form-02.css);
 @import url(../blocks/form-03.css);
-@import url(../blocks/footer.css);
+@import url(../blocks/form-04.css);
 
 
 * {
