--- a/blocks/form-01.css
+++ b/blocks/form-01.css
@@ -2,7 +2,7 @@
   --blue-acent-color: rgb(27, 113, 204);
 }
 
-.form-01 {
+.form {
   max-width: 400px;
   max-height: 600px;
   border-radius: 15px;
@@ -15,24 +15,24 @@
   color: black;
 }
 
-.form-01__title {
+.form__title {
   text-align: left;
   font-weight: 400;
   margin-bottom: 35px;
 }
 
-.form-01__fieldset {
+.form__fieldset {
   border: none;
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
 }
 
-.form-01__fieldset:last-child {
+.form__fieldset:last-child {
   margin-bottom: 0;
 }
 
-.form-01__input {
+.form__input {
   box-sizing: border-box;
   border: 1px solid rgb(165, 165, 165);
   padding: 20px;
@@ -40,24 +40,24 @@
   width: 100%;
 }
 
-.form-01__input[type="checkbox"] {
+.form__input[type="checkbox"] {
   width: initial;
   min-width: 20px;
   min-height: 20px;
   vertical-align: middle;
 }
 
-.form-01__input::placeholder {
+.form__input::placeholder {
   color: rgb(204, 204, 204);
   font-size: 16px;
 }
 
-.form-01__input:focus {
+.form__input:focus {
   outline: var(--blue-acent-color) solid 1px;
   box-shadow: inset 0 0 10px 0 rgba(27, 113, 204, 0.1);
 }
 
-.form-01__label {
+.form__label {
   font-weight: 500;
   font-size: 14px;
   display: block;
@@ -65,16 +65,16 @@
   margin-bottom: 8px;
 }
 
-.form-01__label:first-child {
+.form__label:first-child {
   margin-top: 0;
 }
 
-.form-01__label_type_inline {
+.form__label_type_inline {
   display: inline;
   padding-left: 7px;
 }
 
-.form-01__button {
+.form__button {
   background-color: var(--blue-acent-color);
   color: white;
   padding: 20px 30px;
@@ -84,13 +84,13 @@
   min-height: 50px;
 }
 
-.form-01__button:focus {
+.form__button:focus {
   outline: var(--blue-acent-color) solid 1px;
   background-color: transparent;
   color: var(--blue-acent-color);
 }
 
-.form-01__button_type_nofill {
+.form__button_type_nofill {
   background-color: transparent;
   color: var(--blue-acent-color);
 }
