--- a/blocks/form-04.css
+++ b/blocks/form-04.css
@@ -3,7 +3,7 @@
   --grey-border-color: rgb(165, 165, 165);
 }
 
-.form-04 {
+.form {
   max-width: 400px;
   max-height: 600px;
   border-radius: 15px;
@@ -20,13 +20,13 @@
   color: black;
 }
 
-.form-04__title {
+.form__title {
   text-align: left;
   font-weight: 400;
   margin-bottom: 0px;
 }
 
-.form-04__fieldset {
+.form__fieldset {
   border: none;
   margin: 0;
   padding: 0;
@@ -35,12 +35,12 @@
   gap: 30px;
 }
 
-.form-04__fieldset_type_row {
+.form__fieldset_type_row {
   flex-flow: row nowrap;
   justify-content: left;
 }
 
-.form-04__input {
+.form__input {
   box-sizing: border-box;
   font-size: initial;
   border: none;
@@ -48,25 +48,25 @@
   padding: 15px;
 }
 
-.form-04__input[type="checkbox"] {
+.form__input[type="checkbox"] {
   width: initial;
   min-width: 20px;
   min-height: 20px;
   vertical-align: middle;
 }
 
-.form-04__input::placeholder {
+.form__input::placeholder {
   color: rgb(204, 204, 204);
   font-size: 16px;
 }
 
-.form-04__input:focus {
+.form__input:focus {
   outline: none;
   /* outline: var(--blue-acent-color) solid 1px; */
   /* box-shadow: inset 0 0 10px 0 rgba(27, 113, 204, 0.1); */
 }
 
-.form-04__field {
+.form__field {
   font-weight: 500;
   font-size: 14px;
   display: flex;
@@ -75,7 +75,7 @@
   position: relative;
 }
 
-.form-04__field_type_row {
+.form__field_type_row {
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -84,11 +84,11 @@
 
 /* ========== custom checkbox ========== */
 
-.form-04__checkbox_type_hidden {
+.form__checkbox_type_hidden {
   display: none;
 }
 
-.form-04__chekcbox_type_custom {
+.form__chekcbox_type_custom {
   width: 20px;
   height: 20px;
   border: 1px solid var(--grey-border-color);
@@ -97,7 +97,7 @@
   position: relative;
 }
 
-.form-04__chekcbox_type_custom::before {
+.form__chekcbox_type_custom::before {
   content: "";
   height: 25px;
   width: 25px;
@@ -108,12 +108,12 @@
   transform: translate(-50%, -50%);
 }
 
-.form-04__checkbox_type_hidden:checked + .form-04__chekcbox_type_custom {
+.form__checkbox_type_hidden:checked + .form__chekcbox_type_custom {
   background: rgb(255, 255, 255);
 }
 
-.form-04__checkbox_type_hidden:checked
-  + .form-04__chekcbox_type_custom::before {
+.form__checkbox_type_hidden:checked
+  + .form__chekcbox_type_custom::before {
   -webkit-mask: url(../images/checkbox_v01.svg) center no-repeat;
   mask: url(../images/checkbox_v01.svg) center no-repeat;
   background-color: var(--blue-acent-color);
@@ -121,7 +121,7 @@
 
 /* =========== buttons =============== */
 
-.form-04__button {
+.form__button {
   background-color: var(--blue-acent-color);
   color: white;
   padding: 20px 30px;
@@ -131,30 +131,30 @@
   min-height: 50px;
 }
 
-.form-04__button:focus {
+.form__button:focus {
   outline: var(--blue-acent-color) solid 1px;
   background-color: transparent;
   color: var(--blue-acent-color);
 }
 
-.form-04__button_type_nofill {
+.form__button_type_nofill {
   background-color: transparent;
   color: var(--blue-acent-color);
 }
 
 /* =========== validation =============== */
 
-.form-04__input_type_error {
+.form__input_type_error {
   border-bottom-color: red;
 }
 
-.form-04__input-error {
+.form__input-error {
   font-size: 12px;
   font-weight: 600;
   color: red;
   visibility: hidden;
 }
 
-.form-04__input-error_active {
+.form__input-error_active {
   visibility: visible;
 }
