--- a/pages/index-05.css
+++ b/pages/index-05.css
@@ -2,6 +2,7 @@
 @import url(../blocks/header.css);
 @import url(../blocks/nav.css);
 @import url(../blocks/main.css);
+@import url(../blocks/form-content.css);
 @import url(../blocks/form-05.css);
 
 
@@ -19,11 +20,11 @@
 
 .page {
   height: 100vh;
-  max-width: 1100px;
+  max-width: 1000px;
   box-sizing: border-box;
-  margin: auto;
+  margin: 0 auto;
 
-  /* background-color: rgb(35, 35, 35); */
+  background-color: rgb(35, 35, 35);
   color: rgb(255, 255, 255);
 
   font-family: "Inter", sans-serif;
